Added div IDs to resume.html

--- a/resume.html
+++ b/resume.html
@@ -106,7 +106,7 @@
         <div class="body-content-custom">
 
             <!-- title and download link for technical resume -->
-            <h3 class="text-center" style="height: 75px; top: 50%; transform: translateY(25%);">
+            <h3 id="technical-resume" class="text-center" style="height: 75px; top: 50%; transform: translateY(25%);">
                 Technical Résumé<br><a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">PDF Download</a>
             </h3>
 
@@ -205,7 +205,8 @@
             <hr />
 
             <!-- title and download link for humanities resume -->
-            <h3 class="text-center" style="height: 75px; top: 50%; transform: translateY(25%);">Humanities
+            <h3 id="humanities-resume" class="text-center" style="height: 75px; top: 50%; transform: translateY(25%);">
+                Humanities
                 Résumé<br><a href="/assets/resumes/Pete_Smith_Resume_(Humanities).pdf">PDF Download</a>
             </h3>
 
