--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <div class="container">
         <div class="body-content-custom">
-            <h1 class="intro-custom">Hi! I'm Pete Smith</h1>
+            <h1 id="about-me" class="intro-custom">Hi! I'm Pete Smith</h1>
 
             <div class="row">
 
@@ -158,7 +158,7 @@
             <hr />
 
             <!-- SVGs of favorite languages -->
-            <h4 class="text-center">My favorite languages</h4>
+            <h4 id="fav-langs" class="text-center">My favorite languages</h4>
             <div class=" row langs-custom">
                 <div class="col-sm col-custom">
                     <img src="/assets/images/langs/python.svg" class="langSVG" height="70px" title="Python"
@@ -175,7 +175,7 @@
             <hr />
 
             <!-- SVGs of languages I have used not listed in favorite languages section -->
-            <h4 class="text-center">Other languages I've used</h4>
+            <h4 id="other-langs" class="text-center">Other languages I've used</h4>
             <div class="row langs-custom">
                 <div class="col-sm col-custom">
                     <img src="/assets/images/langs/c.svg" class="langSVG" height="70px" title="C" alt="C">
@@ -208,7 +208,7 @@
             <hr />
 
             <!-- SVGs of frameworks I have used -->
-            <h4 class="text-center">Frameworks I've used</h4>
+            <h4 id="frameworks" class="text-center">Frameworks I've used</h4>
             <div class="row langs-custom">
                 <div class="col-sm col-custom">
                     <img src="/assets/images/frameworks/bootstrap.svg" class="langSVG" height="70px" title="Bootstrap"
@@ -228,7 +228,8 @@
 
             <!-- various contact/profile links and related SVGs -->
             <div class="links-custom mx-5 my-5">
-                <h4>Want to contact me, see my professional profiles, or challenge me to a game of ping pong? Look
+                <h4 id="contact">Want to contact me, see my professional profiles, or challenge me to a game of ping
+                    pong? Look
                     below!</h4>
                 <div class="container">
                     <div class="row">
