Added italics for book title in humanities resume

--- a/resume.html
+++ b/resume.html
@@ -262,7 +262,7 @@
                 <li><strong>"<i>American Notes</i>: Exploring Antebellum Institutionalism"<span
                             style="float: right">(Antebellum America at UMD, April 2023)</span></strong></li>
                 <ul>
-                    <li>In the context of the critiques in Charles Dickens' American Notes, this paper examines a
+                    <li>In the context of the critiques in Charles Dickens' <i>American Notes</i>, this paper examines a
                         variety of
                         institutions central to Antebellum America. The paper explores the nature of institutions
                         including
