Added paper descriptions to writing.html

--- a/writing.html
+++ b/writing.html
@@ -104,7 +104,154 @@
 
     <div class="container">
         <div class="body-content-custom">
-            <h1 class="text-center">Coming soon!</h1>
+            <h3 class="text-center">Writing Samples</h3>
+
+            <div class="card-spacing"></div>
+
+            <!-- begin paper descriptions -->
+            <div id="visions-of-the-west" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">"Welcome to the West, it's been waiting for you" or "Are you lost,
+                            cowboy?"<span style="float: right;">(Nov 2023)</span></h5>
+                        <p class="card-text">This paper explores the ways in which plains life in the latter half of the
+                            19th century was shown in popular media in the following decades. By looking at Laura
+                            Ingalls Wilder's <i>Little House</i> series and Willa Cather's <i>My Ántonia</i>, this paper
+                            argues that forms of media romanticized the West to serve as a distraction from the
+                            realities of events such as World War I and the Great Depression, while at the same time
+                            remaining faithful to many aspects of life on the frontier.
+                            <br><br>
+                            This paper is associated with <i>HIST355: Civil War and the Rise of Industrialization</i> at
+                            the University
+                            of
+                            Maryland.
+                        </p>
+                        <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div id="american-notes" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">"<i>American Notes</i>: Exploring Antebellum Institutionalism"<span
+                                style="float: right;">(Apr 2023)</span></h5>
+                        <p class="card-text">In the context of the critiques in Charles Dickens' <i>American Notes</i>,
+                            this
+                            paper examines a variety of institutions central to Antebellum America. The paper explores
+                            the nature of institutions including
+                            slavery, prison reform, and mental asylums, contextualized by other contemporary and modern
+                            authors including Alexis de
+                            Tocqueville and David J. Rothman, in order to show these institutions' roles in the rapidly
+                            increasing societal
+                            division seen at the time.
+                            <br><br>
+                            This paper is associated with <i>HIST354: Ante-Bellum America</i> at the University
+                            of
+                            Maryland.
+                        </p>
+                        <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div id="old-victorian-order" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">"Changes in the Old Victorian Order"<span style="float: right;">(Dec
+                                2022)</span></h5>
+                        <p class="card-text">This paper broadly explores how Victorian society changed throughout the
+                            19th century, especially with respect to gender. By examining sources including George
+                            Gissing's <i>The Odd Women</i>, Judith Walkowitz's "Jack the Ripper and the Myth of Male
+                            Violence," and various essays from <i>Women, the Family, and Freedom</i>, this paper shows
+                            the ways in which women's roles in society were changing, both for better and for worse,
+                            through discussions on marriage, education, prostitution, and violence.
+                            <br><br>
+                            This paper is associated with <i>HIST429A: Sex and Class in Nineteenth Century Britain</i>
+                            at the University of Maryland.
+                        </p>
+                        <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div id="masculinity-in-victorian-britain" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">"Masculinity in Victorian Britain"<span style="float: right;">(Nov
+                                2022)</span></h5>
+                        <p class="card-text">This paper explores the various elements of what it meant to be masculine
+                            in Victorian Britain, namely control of
+                            oneself and one's environment and the physical strength that was required. By examining
+                            contemporary and modern sources
+                            including Rudyard Kipling's “William the Conqueror” and Nadja Durbach's “Monstrosity,
+                            Masculinity, and Medicine,” the
+                            paper shows how systemic masculinity was spread and how it was both accepted and challenged
+                            throughout society.
+                            <br><br>
+                            This paper is associated with <i>HIST429A: Sex and Class in Nineteenth Century Britain</i>
+                            at the University of Maryland.
+                        </p>
+                        <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div id="the-two-nations" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">"<i>The Two Nations</i>: Class Disparities in Victorian Britain"<span
+                                style="float: right;">(Oct 2022)</span>
+                        </h5>
+                        <p class="card-text">This paper explores the increasingly apparent class disparities seen in
+                            Victorian Britain. By using Benjamin Disraeli's idea that Britain was actually split into
+                            two nations - the rich and the poor - and examining sources including Leonore Davidoff's
+                            <i>The Best Circles</i>, Friedrich Engels' <i>The Condition of the Working-Class in
+                                England</i>, Timothey Mayhew's <i>Mayhew's Characters</i>, and Thomas Macaulay's "Speech
+                            on the Reform Bill of 1832," this paper looks at the ways in which the rich and the poor
+                            lived their lives in different worlds, while at the same time interacting with each other in
+                            various ways.
+                            <br><br>
+                            This paper is associated with <i>HIST429A: Sex and Class in Nineteenth Century Britain</i>
+                            at the University of Maryland.
+                        </p>
+                        <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div id="psychological-warfare-mongol-conquest" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">"An Analysis of the Role of Psychological Warfare in Mongol
+                            Conquest"<span style="float: right;">(Nov 2021)</span></h5>
+                        <p class="card-text">Through the use of primary sources including Juvaini's <i>The
+                                History of the World Conqueror</i> and Rashid al-Din's <i>The Successors of Genghis
+                                Khan</i>, along with secondary sources by Timothy May, this research paper shows the
+                            ways in which the Mongols used psychological warfare as an effective form of strategy. By
+                            exploring their use of terror in the form of massacres, misinformation, and the subsequent
+                            surrenders that came as a result, this paper effectively argues that the Mongols used
+                            psychological warfare as a means of gaining territory, rather than just for the sake of
+                            destruction.
+                            <br><br>
+                            This paper is associated with <i>HIST319R: Genghis Khan and the Mongols</i> at
+                            the University of Maryland.
+                        </p>
+                        <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
+                    </div>
+                </div>
+            </div>
+            <!-- end paper descriptions -->
 
             <hr />
 
