Adjusted spacing of titles on resume.html.
Now matches coding.html and writing.html

--- a/resume.html
+++ b/resume.html
@@ -106,11 +106,9 @@
         <div class="body-content-custom">
 
             <!-- title and download link for technical resume -->
-            <h3 id="technical-resume" class="text-center" style="height: 75px; top: 50%; transform: translateY(25%);">
+            <h3 id="technical-resume" class="text-center">
                 Technical Résumé<br><a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">PDF Download</a>
             </h3>
-
-            <hr style="opacity: 0; margin: 20px 0 20px" />
 
             <!-- begin technical resume -->
             <br>
@@ -205,12 +203,10 @@
             <hr />
 
             <!-- title and download link for humanities resume -->
-            <h3 id="humanities-resume" class="text-center" style="height: 75px; top: 50%; transform: translateY(25%);">
+            <h3 id="humanities-resume" class="text-center">
                 Humanities
                 Résumé<br><a href="/assets/resumes/Pete_Smith_Resume_(Humanities).pdf">PDF Download</a>
             </h3>
-
-            <hr style="opacity: 0; margin: 20px 0 20px" />
 
             <!-- begin humanities resume -->
             <br>
