Minor code formatting updates to writing.html, one minor description update

--- a/writing.html
+++ b/writing.html
@@ -115,16 +115,14 @@
                         <h5 class="card-title">"Welcome to the West, it's been waiting for you" or "Are you lost,
                             cowboy?"<span style="float: right;">(Nov 2023)</span></h5>
                         <p class="card-text">This paper explores the ways in which plains life in the latter half of the
-                            19th century was shown in popular media in the following decades. By looking at Laura
+                            nineteenth century was shown in popular media in the following decades. By looking at Laura
                             Ingalls Wilder's <i>Little House</i> series and Willa Cather's <i>My Ántonia</i>, this paper
                             argues that forms of media romanticized the West to serve as a distraction from the
                             realities of events such as World War I and the Great Depression, while at the same time
                             remaining faithful to many aspects of life on the frontier.
                             <br><br>
                             This paper is associated with <i>HIST355: Civil War and the Rise of Industrialization</i> at
-                            the University
-                            of
-                            Maryland.
+                            the University of Maryland.
                         </p>
                         <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
                     </div>
@@ -139,17 +137,13 @@
                         <h5 class="card-title">"<i>American Notes</i>: Exploring Antebellum Institutionalism"<span
                                 style="float: right;">(Apr 2023)</span></h5>
                         <p class="card-text">In the context of the critiques in Charles Dickens' <i>American Notes</i>,
-                            this
-                            paper examines a variety of institutions central to Antebellum America. The paper explores
-                            the nature of institutions including
-                            slavery, prison reform, and mental asylums, contextualized by other contemporary and modern
-                            authors including Alexis de
-                            Tocqueville and David J. Rothman, in order to show these institutions' roles in the rapidly
-                            increasing societal
-                            division seen at the time.
+                            this paper examines a variety of institutions central to Antebellum America. The paper
+                            explores the nature of institutions including slavery, prison reform, and mental asylums,
+                            contextualized by other contemporary and modern authors including Alexis de Tocqueville and
+                            David J. Rothman, in order to show these institutions' roles in the rapidly increasing
+                            societal division seen at the time.
                             <br><br>
-                            This paper is associated with <i>HIST354: Ante-Bellum America</i> at the University
-                            of
+                            This paper is associated with <i>HIST354: Ante-Bellum America</i> at the University of
                             Maryland.
                         </p>
                         <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
@@ -165,7 +159,7 @@
                         <h5 class="card-title">"Changes in the Old Victorian Order"<span style="float: right;">(Dec
                                 2022)</span></h5>
                         <p class="card-text">This paper broadly explores how Victorian society changed throughout the
-                            19th century, especially with respect to gender. By examining sources including George
+                            nineteenth century, especially with respect to gender. By examining sources including George
                             Gissing's <i>The Odd Women</i>, Judith Walkowitz's "Jack the Ripper and the Myth of Male
                             Violence," and various essays from <i>Women, the Family, and Freedom</i>, this paper shows
                             the ways in which women's roles in society were changing, both for better and for worse,
@@ -187,13 +181,11 @@
                         <h5 class="card-title">"Masculinity in Victorian Britain"<span style="float: right;">(Nov
                                 2022)</span></h5>
                         <p class="card-text">This paper explores the various elements of what it meant to be masculine
-                            in Victorian Britain, namely control of
-                            oneself and one's environment and the physical strength that was required. By examining
-                            contemporary and modern sources
-                            including Rudyard Kipling's “William the Conqueror” and Nadja Durbach's “Monstrosity,
-                            Masculinity, and Medicine,” the
-                            paper shows how systemic masculinity was spread and how it was both accepted and challenged
-                            throughout society.
+                            in Victorian Britain, namely control of oneself and one's environment and the physical
+                            strength that was required. By examining contemporary and modern sources including Sir
+                            Arthur Conan Doyle's <i>The Sign of Four</i>, Rudyard Kipling's “William the Conqueror," and
+                            Nadja Durbach's “Monstrosity, Masculinity, and Medicine,” the paper shows how systemic
+                            masculinity was spread and how it was both accepted and challenged throughout society.
                             <br><br>
                             This paper is associated with <i>HIST429A: Sex and Class in Nineteenth Century Britain</i>
                             at the University of Maryland.
