added advent of code to coding.html

--- a/coding.html
+++ b/coding.html
@@ -117,6 +117,26 @@
             <div class="card-spacing"></div>
 
             <!-- begin project descriptions -->
+            <div id="advent-of-code-2023" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">Advent of Code 2023<span style="float: right;">(Dec 2023 -
+                                Present)</span></h5>
+                        <p class="card-text">Advent of Code is an annual coding advent calendar created by Eric Wastl,
+                            although this is my first year participating.
+                            I am currently using Python, but I plan to use other languages as well once we get further
+                            into December.
+                        </p>
+                        <a href="https://github.com/psmit703/advent-of-code-2023" class="btn btn-primary card-link">My
+                            Solutions (GitHub Repo)</a>
+                        <a href="https://adventofcode.com/2023" class="btn btn-primary card-link">Advent of Code 2023
+                            Site</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
             <div id="squid-games" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
@@ -312,7 +332,7 @@
 
             <div class="card-spacing"></div>
 
-            <div id="bloom-fitler" class="card-wrapper d-flex justify-content-center">
+            <div id="bloom-filter" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Bloom Filter (Python)<span style="float: right;">(May 2023 - May
