Added publications page

--- a/publications.html
+++ b/publications.html
@@ -18,13 +18,13 @@
 <!-- i. footer links -->
 
 <head>
-    <title>Sitemap | Pete Smith</title>
+    <title>Publications | Pete Smith</title>
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
-    <meta name="description" content="A text-based sitemap for this website">
+    <meta name="description" content="A list of my various publications">
     <meta name="author" content="Pete Smith">
 
     <meta name="robots" content="noindex, nofollow">
-    <link rel="canonical" href="https://www.psmit.dev/sitemap.html">
+    <link rel="canonical" href="https://www.psmit.dev/publications.html">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
@@ -45,7 +45,7 @@
     <!-- navbar scroll script -->
     <script defer src="/assets/js/navbar-scroll.js"></script>
 
-    <!-- delete dark mode cookie script -->
+    <!-- delete all cookies script -->
     <script defer src="/assets/js/delete-cookies.js"></script>
 
     <!-- navbar item text on left for mobile format script -->
@@ -90,9 +90,9 @@
                     <li class="nav-item mx-2">
                         <a class="nav-link nav-resume-custom text-center" href="/resume.html">Résumé</a>
                     </li>
-                    <li class="nav-item mx-2">
-                        <a class="nav-link nav-publications-custom text-center"
-                            href="/publications.html">Publications</a>
+                    <li class="nav-item mx-2 active active-custom">
+                        <a class="nav-link nav-publications-custom text-center" href="#">Publications<span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link nav-coding-custom text-center" href="/coding.html">Coding Projects</a>
@@ -107,74 +107,7 @@
 
     <div class="container">
         <div class="body-content-custom">
-            <h2 class="text-center">Sitemap</h2>
-
-            <hr />
-
-            <!-- text-based sitemap -->
-            <div class="row text-center">
-                <div class="col-sm">
-                    <!-- navbar sitemap section -->
-                    <h4>Main Site</h4>
-
-                    <div class="sitemap-spacing"></div>
-
-                    <ul style="list-style-type: none; padding: 0px;">
-                        <li><a href=" /">Home Page</a></li>
-                        <li><a href="/resume.html">Résumé</a></li>
-                        <li><a href="/coding.html">Coding Projects</a></li>
-                        <li><a href="/writing.html">Writing Samples</a></li>
-                    </ul>
-
-                    <div class="sitemap-spacing"></div>
-
-                </div>
-                <div class="col-sm">
-                    <!-- footer sitemap section -->
-                    <h4>Footer Links</h4>
-
-                    <div class="sitemap-spacing"></div>
-
-
-                    <ul style="list-style-type: none; padding: 0px;">
-                        <li><a href=" /changelog.html">Changelog</a></li>
-                        <li><a href="/sitemap.html">Sitemap</a></li>
-                        <li><a href="https://github.com/psmit703/personal-website">GitHub Repo (External)</a></li>
-                        <li><a href=" /privacy.html">Privacy Notice</a></li>
-                    </ul>
-
-                    <div class="sitemap-spacing"></div>
-
-                </div>
-                <div class="col-sm">
-                    <!-- utility sitemap section -->
-                    <h4>Utility Pages</h4>
-
-                    <div class="sitemap-spacing"></div>
-
-
-                    <ul style="list-style-type: none; padding: 0px;">
-                        <li><a href="/404.html">Error 404 Page</a></li>
-                        <li><a href="/template.html">Template Page</a></li>
-                    </ul>
-
-                    <div class="sitemap-spacing"></div>
-
-                </div>
-            </div>
-
-            <hr />
-
-            <!-- brief description of each sitemap section -->
-            <h5 class="text-center"><i>Pages listed under "Main Site" are accessible through the navbar at the top of
-                    each page</i></h5>
-
-            <h5 class="text-center"><i>Pages listed under "Footer Links" are accessible through the footer at the bottom
-                    of each page</i></h5>
-
-            <h5 class="text-center"><i>Pages listed under "Utility Pages" have no direct links to them on this site
-                    (apart from through this page) and are used as utilities for user experience and site
-                    development</i></h5>
+            BODY CONTENT
 
             <hr />
 
@@ -184,7 +117,7 @@
                 <p><a href="/changelog.html">Changelog</a> | <a
                         href="https://github.com/psmit703/personal-website">GitHub
                         Repository</a></p>
-                <p><a href="#">Sitemap</a> | <a href="/privacy.html">Privacy Notice</a></p>
+                <p><a href="/sitemap.html">Sitemap</a> | <a href="/privacy.html">Privacy Notice</a></p>
                 <p id="delete-cookies-wrapper"><span id="delete-cookies">Reset Dark Mode Preference</span></p>
             </footer>
         </div>
