--- a/changelog.html
+++ b/changelog.html
@@ -94,6 +94,10 @@
                         <a class="nav-link nav-resume-custom text-center" href="/resume.html">Résumé</a>
                     </li>
                     <li class="nav-item mx-2">
+                        <a class="nav-link nav-publications-custom text-center"
+                            href="/publications.html">Publications</a>
+                    </li>
+                    <li class="nav-item mx-2">
                         <a class="nav-link nav-coding-custom text-center" href="/coding.html">Coding Projects</a>
                     </li>
                     <li class="nav-item mx-2">
