--- a/coding.html
+++ b/coding.html
@@ -90,6 +90,10 @@
                     <li class="nav-item mx-2">
                         <a class="nav-link nav-resume-custom text-center" href="/resume.html">Résumé</a>
                     </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link nav-publications-custom text-center"
+                            href="/publications.html">Publications</a>
+                    </li>
                     <li class="nav-item mx-2 active active-custom">
                         <a class="nav-link nav-coding-custom text-center" href="#">Coding Projects<span
                                 class="sr-only">(current)</span></a>
