--- a/resume.html
+++ b/resume.html
@@ -92,6 +92,10 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item mx-2">
+                        <a class="nav-link nav-publications-custom text-center"
+                            href="/publications.html">Publications</a>
+                    </li>
+                    <li class="nav-item mx-2">
                         <a class="nav-link nav-coding-custom text-center" href="/coding.html">Coding Projects</a>
                     </li>
                     <li class="nav-item mx-2">
