added missing italics in publications.html

--- a/publications.html
+++ b/publications.html
@@ -172,8 +172,8 @@
                         <h6>Citation:</h6>
                         Smith, P. S., Tjiputra, L., Bauer, J. M., Sharkey, B., and Farnham, T., "Comet Statistics -
                         A graphical representation of international comet discovery and observation statistics from
-                        the NASA PDS Small Bodies Node and the Minor Planet Center", in Astronomical Data Analysis
-                        Software and Systems XXXIII, 2024, in press.
+                        the NASA PDS Small Bodies Node and the Minor Planet Center", in <i>Astronomical Data Analysis
+                            Software and Systems XXXIII</i>, 2024, in press.
                         <hr />
                         This is the paper component of my presentation of "Comet Statistics" from November 8, 2023.
                         The paper will be published as part of the ADASS XXXIII Conference Proceedings by the
