added links to related content for comet statistics, other minor edits

--- a/coding.html
+++ b/coding.html
@@ -310,6 +310,8 @@
                             Link</a>
                         <a href="#" class="btn btn-primary card-link" style="pointer-events: none;">(Code currently
                             unavailable)</a>
+                        <a href="/publications.html#comet-statistics" class="btn btn-primary card-link">Associated
+                            conference paper</a>
                     </div>
                 </div>
             </div>
