--- a/publications.html
+++ b/publications.html
@@ -181,6 +181,8 @@
                         <hr />
                         </p>
                         <a href="#" class="btn btn-primary card-link">Publication not yet available</a>
+                        <a href="/coding.html#comet-statistics" class="btn btn-primary card-link">Associated
+                            code</a>
                     </div>
                 </div>
             </div>
