--- a/writing.html
+++ b/writing.html
@@ -118,6 +118,7 @@
                     <div class="card-body">
                         <h5 class="card-title">"Welcome to the West, it's been waiting for you" or "Are you lost,
                             cowboy?"<span style="float: right;">(Nov 2023)</span></h5>
+                        <!-- yes, these titles are references to Taylor Swift and Elle Coves -->
                         <p class="card-text">This paper explores the ways in which plains life in the latter half of the
                             nineteenth century was shown in popular media in the following decades. By looking at Laura
                             Ingalls Wilder's <i>Little House</i> series and Willa Cather's <i>My Ántonia</i>, this paper
