fixed typo in publications.html

--- a/publications.html
+++ b/publications.html
@@ -159,7 +159,7 @@
                             of Dr. Tony Farnham’s work, which currently involves manually doing these conversions. The
                             purpose of this ongoing
                             project is to automate this process; the anticipated
-                            increases in comet discoveries/observations from Vera Rubin/LSST and Neo Surveyor
+                            increases in comet discoveries/observations from Vera Rubin/LSST and NEO Surveyor
                             surveys will likely make this unmanageable from a manual standpoint. Making these
                             conversions will allow for a single reference source for comet nomenclature that will
                             open legacy data sources to research investigations. By using this, researchers may be
