--- a/index.html
+++ b/index.html
@@ -60,6 +60,35 @@
 
     <!-- Clicky Website Analytics script -->
     <script async data-id="101425859" src="//static.getclicky.com/js"></script>
+
+    <!-- structured data -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org/",
+            "@type": "WebSite",
+            "name": "Pete Smith",
+            "abstract": "A website for all things Pete Smith! This is a personal portfolio site for Pete Smith, a software engineer in the Washington, D.C. area",
+            "copyrightHolder": "Pete Smith",
+            "copyrightNotice": "© 2023 Pete Smith",
+            "copyrightYear": "2023",
+            "creator": "Pete Smith",
+            "author": "Pete Smith",
+            "license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
+            "about": {
+                        "@context": "https://schema.org/",
+                        "@type": "Person",
+                        "name": "Pete Smith",
+                        "additionalName": "Peter Smith",
+                        "sameAs": "https://www.linkedin.com/in/petesmith-umd/",
+                        "jobTitle": "Web Development Intern",
+                        "worksFor": "NASA PDS Small Bodies Node at the University of Maryland",
+                        "telephone": "(443) 254-2441",
+                        "email": "psmit703@outlook.com",
+                        "workLocation": "Washington, D.C.",
+                        "knowsLanguage": "en, en-US"
+                     }
+        }
+    </script>
 </head>
 
 <body>
@@ -87,23 +116,25 @@
 
             <!-- navbar links -->
             <div class="collapse navbar-collapse" id="navbar-options">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item mx-2 active active-custom">
-                        <a class="nav-link nav-home-custom text-center" href="#">Home<span
+                <ul class="navbar-nav ml-auto" itemscope itemtype="https://schema.org/SiteNavigationElement">
+                    <li class="nav-item mx-2 active active-custom" itemprop="name">
+                        <a class="nav-link nav-home-custom text-center" href="#" itemprop="url">Home<span
                                 class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item mx-2">
-                        <a class="nav-link nav-resume-custom text-center" href="/resume.html">Résumé</a>
+                    <li class="nav-item mx-2" itemprop="name">
+                        <a class="nav-link nav-resume-custom text-center" href="/resume.html" itemprop="url">Résumé</a>
                     </li>
-                    <li class="nav-item mx-2">
-                        <a class="nav-link nav-publications-custom text-center"
-                            href="/publications.html">Publications</a>
+                    <li class="nav-item mx-2" itemprop="name">
+                        <a class="nav-link nav-publications-custom text-center" href="/publications.html"
+                            itemprop="url">Publications</a>
                     </li>
-                    <li class="nav-item mx-2">
-                        <a class="nav-link nav-coding-custom text-center" href="/coding.html">Coding Projects</a>
+                    <li class="nav-item mx-2" itemprop="name">
+                        <a class="nav-link nav-coding-custom text-center" href="/coding.html" itemprop="url">Coding
+                            Projects</a>
                     </li>
-                    <li class="nav-item mx-2">
-                        <a class="nav-link nav-writing-custom text-center" href="/writing.html">Writing Samples</a>
+                    <li class="nav-item mx-2" itemprop="name">
+                        <a class="nav-link nav-writing-custom text-center" href="/writing.html" itemprop="url">Writing
+                            Samples</a>
                     </li>
                 </ul>
             </div>
